roles/extensions/files/traefik-yaml/traefik-ds.yaml
---
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      hostNetwork: true
      containers:
      - image: traefik
        name: traefik-ingress-lb
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: https
          containerPort: 443
          hostPort: 443
        - name: docker-hub
          containerPort: 5000
          hostPort: 5000
        - name: admin
          containerPort: 8080
          hostPort: 8080
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
        - --api
        - --kubernetes
        - --configFile=/config/traefik.toml
        - --logLevel=INFO
        volumeMounts:
        - mountPath: "/config"
          name: config
        - mountPath: "/ssl"
          name: ssl
        - mountPath: "/dockerhub-certs"
          name: dockerhub
      volumes:
      - name: config
        configMap:
          name: traefik-conf
      - name: ssl
        secret:
          secretName: pcpay-tls-cert
      - name: dockerhub
        secret:
          secretName: dockerhub-certs
#---
#kind: Service
#apiVersion: v1
#metadata:
#  name: traefik-ingress-service
#  namespace: kube-system
#spec:
#  selector:
#    k8s-app: traefik-ingress-lb
#  ports:
#    - protocol: TCP
#      port: 80
#      name: web
#    - protocol: TCP
#      port: 8080
#      name: admin
