roles/extensions/files/traefik-yaml/cheese-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-hub
  namespace: kube-system
spec:
  rules:
  - host: tomato-online-msaskter-lb-bb6cb7cba3da0dbf.elb.ap-northeast-1.amazonaws.com
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-local-hub
          servicePort: 443
