roles/extensions/files/traefik-yaml/ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/whitelist-source-range: "118.174.30.242/32"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: traefik-ui.pcpay.me
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: web
